maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: '<-' expected but ')' found.
  for (y<0 to getMondeHauteur()-1){
                                 ^JediEscaper:41: error: illegal start of simple expression
}
^